@@ -18,6 +18,9 @@
  *
  */
 
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
 
 #include <dfsch/stream.h>
 
