@@ -20,6 +20,10 @@
 
 /** @file Simple test program for dfsch - REP loop. */
 
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
+
 #include <dfsch/dfsch.h>
 #include <dfsch/stream.h>
 #include <dfsch/load.h>
@@ -130,8 +134,6 @@ int main(int argc, char**argv){
   signal(SIGINT, sigint_handler);
 
   dfsch_ctx_define(ctx,"version",dfsch_make_string("0.2dev"));
-  dfsch_ctx_define(ctx,"argv0",dfsch_make_string(argv[0]));
-  dfsch_ctx_define(ctx,"arg-count",dfsch_make_number(argc));
 
   dfsch_load_register(ctx);
 
